--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <script src="js/app.js"></script>
   </head>
   <body>
+    <div ng-include='"templates/header.html"'></div>
     <div>
       <label>Name:</label>
       <input type="text" ng-model="yourName" placeholder="Enter a name here">
